# lili

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Jenkinsfile  README.md  h5viewer.ipynb  spack.yaml  upload_docs.sh
.github/: spack.yaml
.github/workflows/: test-runner.yml  test-spack.yml  trigger-jenkins.yml
cmake/: ConfigureGTest.cmake  LILITools.cmake  config.h.in
docs/: CMakeLists.txt  Doxyfile.in  code_particle.rst  conf.py  conf.py.in  documentation.rst  faq.rst  implementation.rst  index.rst  particle_eom.rst  physics.rst  quickstart.rst  requirements.txt
examples/input/: test.json  test.jsonc  tp.jsonc
lib/: CMakeLists.txt
src/: CMakeLists.txt  lili.cpp  main.cpp  parameter.hpp
src/field/: CMakeLists.txt  field.cpp  field.hpp
src/fields/: CMakeLists.txt  fields.cpp  fields.hpp
src/input/: CMakeLists.txt  input.cpp  input.hpp
src/mesh/: CMakeLists.txt  load_mesh.cpp  load_mesh.hpp  mesh.cpp  mesh.hpp  save_mesh.cpp  save_mesh.hpp
src/output/: CMakeLists.txt  output.cpp  output.hpp
src/particle/: CMakeLists.txt  particle.cpp  particle.hpp
src/particle/track_particle/: CMakeLists.txt  track_particle.cpp  track_particle.hpp
src/particle_initialization/: CMakeLists.txt  particle_initialization.cpp  particle_initialization.hpp
src/particle_mover/: CMakeLists.txt  particle_mover.cpp  particle_mover.hpp
src/task/: CMakeLists.txt  task.cpp  task.hpp
src/task/initialization_task/: CMakeLists.txt
src/task/initialization_task/itask_fields/: CMakeLists.txt  itask_fields.cpp  itask_fields.hpp
src/task/initialization_task/itask_particles/: CMakeLists.txt  itask_particles.cpp  itask_particles.hpp
src/task/initialization_task/particle_initialization/: task_par_init.cpp  task_par_init.hpp
src/task/initialization_task/task_init_fields/: CMakeLists.txt  task_init_fields.cpp  task_init_fields.hpp
src/task/initialization_task/task_init_particles/: CMakeLists.txt  task_init_particles.cpp  task_init_particles.hpp
src/task/initialization_task/task_par_init/: CMakeLists.txt  task_par_init.cpp  task_par_init.hpp
src/task/loop_task/: CMakeLists.txt
src/task/loop_task/calculate_cfl/: CMakeLists.txt
src/task/loop_task/ltask_cfl/: CMakeLists.txt
src/task/loop_task/ltask_pmove/: CMakeLists.txt  ltask_pmove.cpp  ltask_pmove.hpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  field.cpp  field_test.cpp  mesh.cpp  particle.cpp
users/: parameter.json
